--- a/src/views/accountList.html
+++ b/src/views/accountList.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Steam Account Switcher</title>
     
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <script type="text/javascript">
       // FontAwesome icons
       const fontawesome = require('@fortawesome/fontawesome');
@@ -27,7 +27,7 @@
     </div>
   </body>
   <script>
-      require("./app");
+      require("./accountList");
   </script>
-  <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
 </html>
